apps/example-fullstack/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-fullstack
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: apps
    alb.ingress.kubernetes.io/group.order: "20"
    external-dns.alpha.kubernetes.io/hostname: example.test.nightingaleheart.com
spec:
  rules:
    - host: example.test.nightingaleheart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
